[package]
name = "quorp_core"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"
authors = ["Quorp Team <hi@quorp.dev>"]

[lints]
workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
schemars = { workspace = true, features = ["derive"] }
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
