[package]
name = "quorp_memory"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"
authors = ["Quorp Team <hi@quorp.dev>"]

[lib]
path = "src/quorp_memory.rs"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
quorp_ids = { workspace = true }
quorp_memory_model = { workspace = true }
quorp_storage = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
