[package]
name = "quorp_permissions"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"
authors = ["Quorp Team <hi@quorp.dev>"]

[lib]
path = "src/quorp_permissions.rs"

[lints]
workspace = true

[dependencies]
quorp_core.workspace = true
quorp_ids = { workspace = true }
globset = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
serde_json.workspace = true
