[package]
name = "quorp_plan_mode"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"
authors = ["Quorp Team <hi@quorp.dev>"]

[lib]
path = "src/quorp_plan_mode.rs"

[lints]
workspace = true

[dependencies]
quorp_core.workspace = true
quorp_ids = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
serde_json.workspace = true
