[package]
name = "quorp_repo_graph"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"
authors = ["Quorp Team <hi@quorp.dev>"]

[lib]
path = "src/quorp_repo_graph.rs"

[lints]
workspace = true

[dependencies]
quorp_ids = { workspace = true }
serde = { workspace = true, features = ["derive"] }
rustc-hash.workspace = true

[dev-dependencies]
serde_json.workspace = true
