[package]
name = "quorp_rust_intel"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"
authors = ["Quorp Team <hi@quorp.dev>"]

[lib]
path = "src/quorp_rust_intel.rs"

[lints]
workspace = true

[dependencies]
quorp_repo_graph = { workspace = true }
quorp_verify_model = { workspace = true }
serde = { workspace = true, features = ["derive"] }
