[package]
name = "quorp_sandbox"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"
authors = ["Quorp Team <hi@quorp.dev>"]

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
chrono = { workspace = true, features = ["serde"] }
log.workspace = true
libc.workspace = true
quorp_config.workspace = true
quorp_core.workspace = true
portable-pty.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tempfile.workspace = true
thiserror = "=2.0.18"
util.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
